Fixed nav bar alignment

--- a/app.css
+++ b/app.css
@@ -19,6 +19,11 @@
     top: 0;
 }
 
+.site-navigation{
+    position:relative;
+    left: 120px;
+}
+
 .social-icon img{
     padding: 5px;
     width: 5%;
@@ -27,11 +32,13 @@
 }
 
 .logo-img img{
-    width:25%;
+    width:10%;
+    position: relative;
+    right: 300px;
 }
 
 .menu {
-    text-align: center;
+    text-align:right;
     list-style-type: none;
     margin: 0;
     background-color: #e71313;
@@ -39,6 +46,7 @@
 
 .menu-item{
     display: inline-block;
+    text-align: center;
 }
 
 .menu-text{
